# ChatCut-2.0

./: .gitattributes  .gitignore  BACKEND_STATUS.md  DEVELOPMENT_ROADMAP.md  DIAGNOSIS.md  PROVIDER_ABSTRACTION.md  QUICK_START.md  QUICK_TEST.md  README.md  RELOAD_PLUGIN.md  RELOAD_PLUGIN_SIMPLE.md  SETUP_GUIDE.md  START_BACKEND.md  TESTING_AUDIO_EFFECTS.md  TESTING_GUIDE.md  TEST_PLAN_AND_REPORT.md  TEST_SEPARATE_AUDIO_PROMPT.md  UNDO_FEATURE.md  USETHISchatcut_colab_server.ipynb  docker-compose.yml  package-lock.json  webpack.config.js
.github/: copilot-instructions.md
backend/: .dockerignore  .env.example  Dockerfile  RESTART_INSTRUCTIONS.md  SETUP_API_KEY.md  main.py  requirements.txt  start_server.sh
backend/models/: schemas.py
backend/services/: ai_provider.py  ai_service.py
backend/tests/: test_ai_provider_result.py  test_ai_service.py  test_api_endpoints.py  test_audio_effects.py  test_function_calling.py  test_gemini_provider.py  test_video_provider.py
frontend/: package-lock.json  package.json  tailwind.config.js  webpack.config.js
frontend/plugin/: index.js  manifest.json
frontend/src/: index.jsx  styles.css
notebooks/: colab_object_tracking_effects.ipynb
plugin/: COLAB_GUIDE.md  MVP_STATUS.md  QUICK_START.md  SETUP.md
web/: .gitignore  CONTROL_PANEL_MERGE_GUIDE.md  DESKTOP_QUICKSTART.md  README.md  SETUP.md  next.config.ts  package-lock.json  package.json
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: commands.rs  export.rs  lib.rs  main.rs
(+95 files in other folders)
